--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -233,6 +233,6 @@
     "zlim"
   ],
   "python.linting.pylintEnabled": true,
-  "restructuredtext.confPath": "${workspaceFolder}/docs",
+  "restructuredtext.confPath": "${workspaceFolder}\\docs",
   "git.ignoreLimitWarning": true
 }
