--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pymedphys"
-version = "0.15.0"
+version = "0.16.0"
 readme = "README.rst"
 description = "Medical Physics library"
 authors = [
@@ -13,7 +13,7 @@ authors = [
     "Jacob McAloney",
     "Pedro Martinez"
 ]
-license = "AGPL-3.0-or-later"
+license = "Apache-2.0"
 homepage = "https://pymedphys.com"
 repository = "https://github.com/pymedphys/pymedphys"
 documentation = "https://docs.pymedphys.com"
