update some docs refs to agpl
Former-commit-id: 3c4f5a156146cdbb117c0e82cbeadba026c75b2d [formerly e564760bf55a565ff896302d16dc9acb816dbc5f]
Former-commit-id: 62fb9ef8991906568f88b28e675442869f4d4b4d

--- a/netlify.toml
+++ b/netlify.toml
@@ -88,6 +88,12 @@ poetry run sphinx-build -W docs docs/_build/html
   force = true
 
 [[redirects]]
+  from = "/explain/agpl-benefits.html"
+  to = "/explain/open-source-benefits.html"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/developer/file-structure.html"
   to = "/contrib/explain/file-structure.html"
   status = 301
