handle sub attributes
Former-commit-id: d0f744acaaadc6ca918636a482aaad0b8a777ac2 [formerly fb4986a0156b4ca24ca7fcdf16fc6d1f18042a64]
Former-commit-id: 7058d95dfee3c0e409bed333bb2110625bd047ba

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@ envlist =
     runslow-{nix,win},
     doctest-{nix,win},
     production-{nix,win},
-    clean-{nix,win},
-    pytest-{nix,win}
+    pytest-{nix,win},
+    clean-{nix,win}-wheel,
+    mindep-{nix,win}-wheel,
 isolated_build = true
 
 [testenv]
@@ -30,22 +31,24 @@ whitelist_externals =
 skip_install = true
 
 commands_pre =
-    ; clean-win: powershell -Command 'Remove-Item -Recurse {toxinidir}\dist -ErrorAction Ignore'
-    clean-nix: bash -c "rm -r {toxinidir}/dist || true"
+    ; wheel-win: powershell -Command 'Remove-Item -Recurse {toxinidir}\dist -ErrorAction Ignore'
+    wheel-nix: bash -c "rm -r {toxinidir}/dist || true"
 
-    clean-win: powershell -Command 'poetry build --format wheel'
-    clean-nix: bash -c "poetry build --format wheel"
+    wheel-win: powershell -Command 'poetry build --format wheel'
+    wheel-nix: bash -c "poetry build --format wheel"
 
-    clean: python -m pip uninstall -y pymedphys
+    wheel: python -m pip uninstall -y pymedphys
 
 commands =
-    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl)'
-    clean-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl"
+    wheel-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl)'
+    wheel-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl"
 
     clean: pymedphys --help
     clean: python -c "import pymedphys"
 
     doctest: pip install -r {toxinidir}/requirements-difficult.txt
+
+    mindep:
 
     docs: poetry install --no-dev -E docs -E library -E labs
     doctest: poetry install --no-dev -E pytest -E library -E labs -E difficult -E gui
