--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,8 @@ envlist =
     runslow-{nix,win},
     doctest-{nix,win},
     production-{nix,win},
-    pytest-{nix,win},
-    clean-{nix,win}-wheel,
-    mindep-{nix,win}-wheel,
+    clean-{nix,win},
+    pytest-{nix,win}
 isolated_build = true
 
 [testenv]
@@ -31,24 +30,22 @@ whitelist_externals =
 skip_install = true
 
 commands_pre =
-    ; wheel-win: powershell -Command 'Remove-Item -Recurse {toxinidir}\dist -ErrorAction Ignore'
-    wheel-nix: bash -c "rm -r {toxinidir}/dist || true"
+    ; clean-win: powershell -Command 'Remove-Item -Recurse {toxinidir}\dist -ErrorAction Ignore'
+    clean-nix: bash -c "rm -r {toxinidir}/dist || true"
 
-    wheel-win: powershell -Command 'poetry build --format wheel'
-    wheel-nix: bash -c "poetry build --format wheel"
+    clean-win: powershell -Command 'poetry build --format wheel'
+    clean-nix: bash -c "poetry build --format wheel"
 
-    wheel: python -m pip uninstall -y pymedphys
+    clean: python -m pip uninstall -y pymedphys
 
 commands =
-    wheel-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl)'
-    wheel-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl"
+    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl)'
+    clean-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl"
 
     clean: pymedphys --help
     clean: python -c "import pymedphys"
 
     doctest: pip install -r {toxinidir}/requirements-difficult.txt
-
-    mindep:
 
     docs: poetry install --no-dev -E docs -E library -E labs
     doctest: poetry install --no-dev -E pytest -E library -E labs -E difficult -E gui
