--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pymedphys"
-version = "0.16.2"
+version = "0.17.0dev1"
 readme = "README.rst"
 description = "Medical Physics library"
 authors = [
