revert clean changes
Former-commit-id: 97d01fee3b18fd45237fc33326591dd802a9dfc1

--- a/tox.ini
+++ b/tox.ini
@@ -36,9 +36,11 @@ commands_pre =
     clean-win: powershell -Command 'poetry build --format wheel'
     clean-nix: bash -c "poetry build --format wheel"
 
+    clean: python -m pip uninstall -y pymedphys
+
 commands =
-    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install --force-reinstall (Get-Item {toxinidir}\dist\*.whl)'
-    clean-nix: bash -c "cd {envtmpdir} && python -m pip install --force-reinstall {toxinidir}/dist/*.whl"
+    clean-win: powershell -Command 'cd {envtmpdir}; python -m pip install (Get-Item {toxinidir}\dist\*.whl)'
+    clean-nix: bash -c "cd {envtmpdir} && python -m pip install {toxinidir}/dist/*.whl"
 
     clean: pymedphys --help
     clean: python -c "import pymedphys"
