--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,14 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        python-version: [3.6]
         toxenv: ['pylint', 'docs', 'doctest', 'runslow', 'clean']
+        include:
+          - os: 'ubuntu'
+            python-version: 3.6
+          - os: 'windows'
+            python-version: 3.7
+          - os: 'macos'
+            python-version: 3.8
 
     runs-on: ${{ matrix.os }}-latest
 
