add more requirements.txt shapely installers
Former-commit-id: 9173a1df7006767947049eb5eb85ae9e685a54e1 [formerly 6e45f16a652e2342c032fa2fb635cc1ebde48529]
Former-commit-id: aba1c6367413fe4fd5d645757fd5383ecbd32b06

--- a/requirements-difficult.txt
+++ b/requirements-difficult.txt
@@ -1,3 +1,7 @@
 cython; sys_platform=='darwin'
-https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp36-cp36m-win32.whl; sys_platform=='win32' and platform_machine=='i386'
-https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp36-cp36m-win_amd64.whl; sys_platform=='win32' and platform_machine=='AMD64'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp36-cp36m-win32.whl; sys_platform=='win32' and platform_machine=='i386' and python_version >= '3.6' and python_version < '3.7'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp36-cp36m-win_amd64.whl; sys_platform=='win32' and platform_machine=='AMD64' and python_version >= '3.6' and python_version < '3.7'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp37-cp37m-win32.whl; sys_platform=='win32' and platform_machine=='i386' and python_version >= '3.7' and python_version < '3.8'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp37-cp37m-win_amd64.whl; sys_platform=='win32' and platform_machine=='AMD64' and python_version >= '3.7' and python_version < '3.8'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp38-cp38m-win32.whl; sys_platform=='win32' and platform_machine=='i386' and python_version >= '3.8' and python_version < '3.9'
+https://github.com/pymedphys/pymedphys/releases/download/v0.14.0/Shapely-1.6.4.post2-cp38-cp38m-win_amd64.whl; sys_platform=='win32' and platform_machine=='AMD64' and python_version >= '3.8' and python_version < '3.9'
