add stackoverflow test
Former-commit-id: d61b5f33c92946098fbe65b838c13f73dcc930cc

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,8 @@ envlist =
     doctest-{nix,win},
     production-{nix,win},
     clean-{nix,win},
-    pytest-{nix,win}
+    pytest-{nix,win},
+    stackoverflow
 isolated_build = true
 
 [testenv]
@@ -42,6 +43,9 @@ commands =
 
     clean: pymedphys --help
     clean: python -c "import pymedphys"
+
+    stackoverflow: poetry install --no-dev
+    stackoverflow: poetry run python {toxinidir}/examples/stable/stackoverflow/gamma.py
 
     doctest: pip install -r {toxinidir}/requirements-difficult.txt
 
