--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,39 @@ jobs:
           pre-commit run --all-files
 
 
+  Examples:
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ['ubuntu']
+        toxenv: ['stackoverflow']
+        python-version: [3.6]
+
+    runs-on: ${{ matrix.os }}-latest
+
+    steps:
+    - uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v1
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Show python information
+      run: |
+        python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
+        python -c "import platform; print(platform.machine()); print(platform.release())"
+
+    - name: Upgrade pip, install poetry and tox
+      run: |
+        python -m pip install --upgrade pip poetry tox
+
+    - name: Run Tox
+      run: |
+        poetry run tox -e ${{ matrix.toxenv }}
+
   Tox:
     strategy:
       fail-fast: false
