write 'from_monaco' into DeliveryMonaco object
Former-commit-id: d593a8f35ff41f71b7124ef5a4f10a8dbbd16e5a

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,8 @@
     "filebrowser",
     "fileeditor",
     "findbb",
+    "fliplr",
+    "flipud",
     "fluence",
     "freetds",
     "functools",
