--- a/.pylintrc
+++ b/.pylintrc
@@ -19,6 +19,7 @@ disable =
     wrong-import-order,
     wrong-import-position,
     ungrouped-imports,
+    import-outside-toplevel,
 
 
 [FORMAT]
@@ -28,4 +29,5 @@ max-line-length=88
 
 extension-pkg-whitelist =
     pymssql,
-    numpy
+    numpy,
+    win32file
