--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
     "PDD",
     "PDDs",
     "Procida's",
+    "RDONLY",
     "Riverina",
     "Sobolewski",
     "affero",
@@ -147,6 +148,7 @@
     "mlcs",
     "mosaiq",
     "mplot",
+    "msvcrt",
     "mudensity",
     "nargs",
     "nbcc",
@@ -160,6 +162,7 @@
     "numpy",
     "optimiser",
     "organised",
+    "osfhandle",
     "pacman",
     "pandoc",
     "parameterisation",
@@ -205,6 +208,7 @@
     "tabmanager",
     "toctree",
     "tolist",
+    "toplevel",
     "toxenv",
     "tpscompare",
     "tqdm",
