add executable bit to file
Former-commit-id: e2392ec5c87c9b6d00e495366386dac805bfae21 [formerly 3862be9d0b58897f82292e869ff5b26f034dc923]
Former-commit-id: aa862f188d660961c62d589b0ef52184a35c25f3

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,11 @@
     "Daniele",
     "EPID",
     "Elekta",
+    "IEXEC",
     "IMRT",
+    "IREAD",
+    "IWRITE",
+    "IXUSR",
     "Jupyter",
     "Lutz",
     "Mathesaurus",
