attempt to cache .pymedphys data dir
Former-commit-id: b4ef4df2e708f52b826e20dbee3e226ef982e1cc

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - uses: actions/cache@v1
+      with:
+        path: ${{ home }}/.pymedphys
+
     - name: Show python information
       run: |
         python -c "import sys; print(sys.version); print(sys.executable); print(sys.platform)"
