--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
 
     - uses: actions/cache@v1
       with:
-        path: ${{ home }}/.pymedphys
+        path: ~/.pymedphys
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos'
@@ -121,7 +121,7 @@ jobs:
 
     - uses: actions/cache@v1
       with:
-        path: ${{ home }}/.pymedphys
+        path: ~/.pymedphys
 
     - name: Install FreeTDS on MacOS
       if: matrix.os == 'macos'
