ignore windows on testing matrix
Former-commit-id: 7504bf404114b8f1e54a26b69d609ec6dd0acfdc [formerly ad479febec8ac19abd2ae13a5cdf0f364c7ab7f3]
Former-commit-id: 59b241bb48028e81a116623c825f0d9b16fc0d9a

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,14 +29,16 @@ jobs:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        toxenv: ['pylint', 'docs', 'doctest', 'runslow', 'clean']
         include:
           - os: 'ubuntu'
             python-version: 3.6
+            toxenv: ['pylint', 'docs', 'doctest', 'runslow', 'clean']
           - os: 'windows'
             python-version: 3.7
+            toxenv: ['docs', 'doctest', 'clean']
           - os: 'macos'
             python-version: 3.7
+            toxenv: ['pylint', 'docs', 'doctest', 'clean']
 
     runs-on: ${{ matrix.os }}-latest
 
