attempt win-pylint skip

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
             python-version: 3.7
           - os: 'macos'
             python-version: 3.7
+        if: ${{ matrix.os }} != 'windows' or ${{ matrix.toxenv }} != 'pylint'
 
     runs-on: ${{ matrix.os }}-latest
 
