--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,13 @@ jobs:
             python-version: 3.7
           - os: 'macos'
             python-version: 3.7
-        if: ${{ matrix.os }} != 'windows' or ${{ matrix.toxenv }} != 'pylint'
+        exclude:
+          - os: 'windows'
+            toxenv: 'pylint'
+          - os: 'windows'
+            toxenv: 'runslow'
+          - os: 'macos'
+            toxenv: 'runslow'
 
     runs-on: ${{ matrix.os }}-latest
 
