--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,9 @@ Pillow = { version = "*", optional = true }
 imageio = { version = "*", optional = true }
 scikit-image = { version = "*", optional = true }
 
+# ml
+tensorflow = { version = "2.1.0-rc2", optional = true }
+
 # docs
 sphinx = { version = ">= 1.4, < 1.8", optional = true }
 sphinx-rtd-theme  = { version = "^0.4.3", optional = true }
@@ -133,6 +136,10 @@ docs = [
 
 gui = [
     "jupyterlab_server"
+]
+
+ml = [
+    "tensorflow"
 ]
 
 library = [
