--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,6 +118,8 @@ pywin32 = { version = "224", platform = "win32" }
 
 # VSCode extension dependencies
 doc8 = "*"
+pydot = "^1.4.1"
+tensorflow-datasets = "^1.3.2"
 
 # gui
 jupyterlab_server = "*"
