add requests depenednecy appropriately
Former-commit-id: 86f2fa1c7d6eed913becc0d02923acdf7a85a7e2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ tqdm = "*"
 keyring = { version = "*", optional = true }
 packaging = { version = "*", optional = true }
 PyYAML = { version = "*", optional = true }
+requests = { version = "*", optional = true }
 
 numpy = { version = "^1.12", optional = true }
 matplotlib = { version = "*", optional = true }
