--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ matplotlib = { version = "*", optional = true }
 scipy = { version = "*", optional = true }
 pandas = { version = "*", optional = true }
 
+Pillow = { version = "*", optional = true }
+imageio = { version = "*", optional = true }
+
 dbfread = { version = "*", optional = true }
 
 pydicom = { version = "*", optional = true }
@@ -56,13 +59,15 @@ jupyterlab_server = { version = "*", optional = true }
 
 # labs
 python_dateutil = { version = "*", optional = true }
-Pillow = { version = "*", optional = true }
-imageio = { version = "*", optional = true }
 scikit-image = { version = "*", optional = true }
 
 # ml
 tensorflow = { version = "2.1.0-rc2", optional = true }
 absl-py = { version = "*", optional = true }
+
+# jupyter
+jupyterlab = { version = "*", optional = true }
+pywin32 = { version = "224", optional = true, platform = "win32" }
 
 # docs
 sphinx = { version = ">= 1.4, < 1.8", optional = true }
@@ -115,9 +120,6 @@ ipython = "*"
 ipykernel = "*"
 m2r = "*"
 
-# Supporting JupyterLab usage
-pywin32 = { version = "224", platform = "win32" }
-
 # VSCode extension dependencies
 doc8 = "*"
 pydot = "^1.4.1"
@@ -146,13 +148,18 @@ ml = [
     "tensorflow", "absl-py"
 ]
 
+jupyter = [
+    "jupyterlab", "pywin32"
+]
+
 library = [
     "keyring", "packaging", "PyYAML", "numpy", "matplotlib", "scipy",
-    "pandas", "dbfread", "pydicom", "pynetdicom", "requests"
+    "pandas", "dbfread", "pydicom", "pynetdicom", "requests", "Pillow",
+    "imageio"
 ]
 
 labs = [
-    "python_dateutil", "Pillow", "imageio", "scikit-image"
+    "python_dateutil", "scikit-image"
 ]
 
 difficult = [
