--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
     "dpmm",
     "dstack",
     "dtype",
+    "dtypes",
     "einsum",
     "electronfactors",
     "elems",
@@ -208,6 +209,7 @@
     "skipif",
     "splev",
     "splprep",
+    "sqrd",
     "stabilising",
     "strftime",
     "struct",
