attempt tensorflow ignore

--- a/.pylintrc
+++ b/.pylintrc
@@ -28,7 +28,10 @@ max-line-length=88
 
 ignored-modules =
     tensorflow
-    tensorflow.keras
+    tensorflow
+
+ignored-classes =
+    tensorflow
 
 extension-pkg-whitelist =
     pymssql,
