--- a/tox.ini
+++ b/tox.ini
@@ -50,9 +50,9 @@ commands =
     doctest: pip install -r {toxinidir}/requirements-difficult.txt
 
     docs: poetry install --no-dev -E docs -E library -E labs
-    doctest: poetry install --no-dev -E pytest -E library -E labs -E difficult -E gui
+    doctest: poetry install --no-dev -E pytest -E library -E labs -E difficult -E gui -E ml
     runslow,pytest: poetry install --no-dev -E pytest -E library -E labs
-    pylint: poetry install --no-dev -E pytest -E library -E labs -E pylint
+    pylint: poetry install --no-dev -E pytest -E library -E labs -E pylint -E ml
 
     doctest: poetry run pytest -v --basetemp={envtmpdir} --junitxml=junit/.test.{envname}.xml [] --doctest-modules {toxinidir}
     pylint: poetry run pytest --pylint --pylint-jobs=1 {toxinidir}
