--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -108,6 +108,7 @@
     "fluence",
     "freetds",
     "functools",
+    "genindex",
     "geos",
     "gmail",
     "howto",
@@ -224,6 +225,7 @@
     "toxenv",
     "tpscompare",
     "tqdm",
+    "tutes",
     "uids",
     "uint",
     "uncompared",
