--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,58 @@ jobs:
           pip install pre-commit
           pre-commit run --all-files
 
+  Docs:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          fetch-depth: 1
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.pymedphys
+          key: pymedphys-data
+
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install Pandoc
+        run: |
+          sudo apt-get install -y pandoc
+
+      - name: Upgrade pip, install poetry
+        run: |
+          python -m pip install --upgrade pip poetry
+
+      - name: Run poetry install
+        run: |
+          poetry install
+
+      - name: Set Zenodo access token
+        env:
+          ZENODO_ACCESS_TOKEN: ${{ secrets.ZENODO_ACCESS_TOKEN }}
+        run: |
+          poetry run pymedphys zenodo set-token $ZENODO_ACCESS_TOKEN
+
+      - name: Build docs, publish them to Zenodo if they have changed
+        run: |
+          poetry run pymedphys dev docs --publish
 
   Tox:
     strategy:
       fail-fast: false
       matrix:
         os: ['ubuntu', 'macos', 'windows']
-        toxenv: ['pylint', 'docs', 'doctest', 'runslow', 'clean']
+        toxenv: ['pylint', 'doctest', 'runslow', 'clean']
         include:
           - os: 'ubuntu'
             python-version: 3.6
@@ -95,21 +140,6 @@ jobs:
       if: matrix.os == 'macos'
       run: |
         brew install freetds
-
-    - name: Install Pandoc on Ubuntu
-      if: matrix.toxenv == 'docs' && matrix.os == 'ubuntu'
-      run: |
-        sudo apt-get install -y pandoc
-
-    - name: Install Pandoc on MacOS
-      if: matrix.toxenv == 'docs' && matrix.os == 'macos'
-      run: |
-        brew install pandoc
-
-    - name: Install Pandoc on Windows
-      if: matrix.toxenv == 'docs' && matrix.os == 'windows'
-      run: |
-        choco install pandoc
 
     - name: Upgrade pip, install poetry and tox
       run: |
