--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,8 +66,14 @@ jobs:
           poetry run pymedphys zenodo set-token $ZENODO_ACCESS_TOKEN
 
       - name: Build docs, publish them to Zenodo if they have changed
+        if: contains(github.ref, 'master')
         run: |
           poetry run pymedphys dev docs --publish
+
+      - name: Build docs
+        if: contains(github.ref, 'master') == False
+        run: |
+          poetry run pymedphys dev docs
 
   Tox:
     strategy:
