install less things within docs workflow
Former-commit-id: a60e10aa3d177b24bd85e6b2c99205080cc30117 [formerly 5145a0d0167e9b86a225e2a4cc63778ca6a61d72]
Former-commit-id: 9e86fcc04e46dfa5f9e4182265424f8a3056714e

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Run poetry install
         run: |
-          poetry install
+          poetry install --no-dev -E docs -E library -E labs
 
       - name: Set Zenodo access token
         env:
