--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,17 @@ jobs:
         run: |
           pip install pre-commit
           pre-commit run --all-files
+      - name: Fix any issues
+        if: failed()
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -m "Fix pre-commit failures" -a
+      - name: Push changes
+        if: failed()
+        uses: ad-m/github-push-action@02b0b75
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
   Docs:
     runs-on: ubuntu-latest
@@ -77,7 +88,7 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           pip install pre-commit
-          pre-commit run --all-files
+          pre-commit run --all-files || true
           git commit -m "Update Docs Zenodo Reference" -a
       - name: Push changes
         if: ${{ contains(github.ref, 'master') }}
