other way to ref
Former-commit-id: 6aeca771f6adf023676a9c714297cc80bae5f2bd [formerly 0c29aebb610562acfc2391ac6ed53bfd8d88caac]
Former-commit-id: ab91b824fad4b64ca2851f2ba182e32aee0449e5

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
         run: |
           echo $GITHUB_REF
           echo $GITHUB_REF | cut -d'/' -f3
+          echo ${GITHUB_REF##*/}
       - uses: actions/checkout@v1
         with:
           fetch-depth: 1
@@ -35,7 +36,7 @@ jobs:
         uses: ad-m/github-push-action@02b0b75
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ env.GITHUB_REF }}
+          branch: ${{ ${env.GITHUB_REF##*/} }}
 
   Docs:
     runs-on: ubuntu-latest
